--- a/index.html
+++ b/index.html
@@ -90,8 +90,6 @@
 
                     <!-- position item code  -->
                     <div class="absolute bottom-[-60px] left-0 flex items-center justify-center w-full">
-
-
                         <div class="grid grid-cols-3 gap-8">
                             <!-- single item -->
                             <div
@@ -139,21 +137,15 @@
                                 </div>
                             </div>
                         </div>
-
-
-
                     </div>
-
                 </div>
             </section>
             <!-- slider section end  -->
-
-
         </div>
     </header>
     <!-- header section end  -->
 
-
+    <!-- success section  -->
     <section id="successId" class="container mx-auto flex items-center justify-center min-h-screen hidden">
         <div class="flex flex-col items-center justify-center border-2 border-primaryColor px-20 py-14 rounded-xl">
             <div class="mb-10">
@@ -288,17 +280,14 @@
                                 </p>
                             </div>
                         </div>
-
                     </div>
-
                     <!-- <h3 class="text-4xl font-extrabold">20% OFF</h3>
             <h4 class="text-xl font-semibold">on your next purchase</h4>
             <p class="font-light">use by January 2024</p> -->
                 </div>
 
-
-
                 <div><img src="images/info-devider.png" alt=""> </div>
+
                 <div class="p-14 text-center flex flex-col justify-center items-center">
                     <img src="./images/fare.png" alt="">
                     <h3 class="text-2xl font-extrabold"><span id="perSeatPrise">550</span> Taka</h3>
@@ -310,11 +299,9 @@
 
 
         <!-- seat section  -->
-
         <section class="bg-[#FFFFFF]">
 
             <div class="grid grid-cols-3 justify-center rounded-2xl py-8">
-
                 <div class="col-span-2 border-dashed border-r-2 border-[#03071233] px-8">
                     <h2 class="mb-6 text-2xl font-bold">Select Your Seat</h2>
                     <!-- set fillec section  -->
@@ -526,13 +513,7 @@
                                 </div>
                             </div>
                         </div>
-
-
-
-
                     </div>
-
-
                 </div>
 
                 <!-- seat right section  -->
@@ -688,15 +669,10 @@
                         <a href="" class="underline text-sm">Terms and Conditions</a>
                         <a href="" class="underline text-sm">Cancellation Policy</a>
                     </div>
-
-
                 </div>
 
             </div>
         </section>
-
-
-
     </main>
 
 
