--- a/index.html
+++ b/index.html
@@ -149,19 +149,10 @@
     <!-- header section end  -->
 
 
-
-
-
-
-
-
-
-
-
-
     <!-- success section  -->
-    <section id="successId" class="container mx-auto flex items-center justify-center min-h-screen hidden">
-        <div class="flex flex-col items-center justify-center border-2 border-primaryColor px-20 py-14 rounded-xl">
+    <section id="successId" class="container mx-auto flex items-center justify-center min-h-screen p-4 lg:p-0  hidden">
+        <div
+            class="flex flex-col items-center justify-center border-2 border-primaryColor p-4 lg:px-20 lg:py-14 rounded-xl">
             <div class="mb-10">
                 <img src="./images/success.png" alt="img">
             </div>
