--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@
                         </div>
                     </div>
 
-                    <div class="flex justify-around  py-6">
+                    <div class="flex flex-col lg:flex-row lg:justify-around text-center  py-6">
                         <a href="" class="underline text-sm">Terms and Conditions</a>
                         <a href="" class="underline text-sm">Cancellation Policy</a>
                     </div>
@@ -707,10 +707,10 @@
                 </div>
             </div>
 
-            <div class="flex flex-col lg:flex-row lg:justify-between lg:items-center">
+            <div class="flex flex-col lg:flex-row justify-between items-center">
                 <div class="mb-6 lg:mb-0">@all rights reserved, Easy-e-Ticket services limited.2024</div>
                 <div>
-                    <ul class="flex flex-col lg:flex-row lg:gap-9">
+                    <ul class="flex gap-9">
                         <li>Terms & condition</li>
                         <li>Return & refund policy</li>
                         <li>Privacy policy</li>
